--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,76 +1,82 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <title>MySkype</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Baloo+Tamma+2:wght@400;500;600&family=Josefin+Slab&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      rel="stylesheet"
-      href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
-      integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-      crossorigin="anonymous"
-    />
+<html lang="en">
+
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Zoom-Clone</title>
+    <link rel="stylesheet" href="css/styles.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+    <script src="https://unpkg.com/peerjs@1.3.1/dist/peerjs.min.js"></script>
     <script src="https://kit.fontawesome.com/c939d0e917.js"></script>
-    <script
-      src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js"
-      integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-      crossorigin="anonymous"
-    ></script>
-    <script
-      src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js"
-      integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-      crossorigin="anonymous"
-    ></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+</head>
 
-    <!-- <link rel="stylesheet" href="/css/main.css" /> -->
-    <!-- <link rel="stylesheet" href="/css/styles.css" /> -->
-  </head>
+<body>
 
-  <body>
-    <h1>My skype</h1>
-    <div class="container">
-        <div class="row">
-           <div class="local_div col-sm-5" id="div1">
-              <div class="card img-fluid" style="width:500px"> 
-                   <video id="localVideo" class="card-img-top" autoplay muted playsinline></video>	
-                 <div class="card-img-overlay">
-                    <h4 class="card-title">You</h4>
-                    <div
-                       onclick="muteUnmute()"
-                       class="main_controls_button main_mute_button"
-                       >
-                       <i class="fas fa-microphone"></i>
+
+    <div class="main">
+        <div class="main_left">
+            <div class="main_videos">
+                <div id='video-grid'>
+                   <video id="localVideo" class="card-img-top" autoplay muted playsinline></video>
+                   <video id="remoteVideo" class="card-img-top" autoplay playsinline></video>
+                </div>
+            </div>
+            <div class="main_controls">
+                <div class="main_controls_block">
+                    <div onclick="muteUnmute()" class="main_controls_button main_mute_button">
+                        <i class="fas fa-microphone"></i>
+                        <span>Mute</span>
                     </div>
-                    <div
-                       onclick="playStop()"
-                       class="main_controls_button main_video_button"
-                       >
-                       <i class="fas fa-video"></i>
+                    <div onclick="playStop()" class="main_controls_button main_video_button"> 
+                        <i class="fas fa-video"></i>
+                        <span>Stop Video</span>
                     </div>
-                 </div>
-              </div>
-           </div>
-           
-           <div class="local_div col-sm-5" id="div1">
-              <div class="card img-fluid" style="width:500px">
-                  <video id="remoteVideo" class="card-img-top" autoplay playsinline></video>
-                 <div class="card-img-overlay">
-                    <h4 class="card-title">Your Friend</h4>
+                </div>
+
+                <div class="main_controls_block">
+                    <div class="main_controls_button">
+                        <i class="fas fa-shield-alt"></i>
+                        <span>Security</span>
+                    </div>
+                    <div class="main_controls_button"> 
+                        <i class="fas fa-user-friends"></i>
+                        <span>Participants</span>
+                    </div>
+                    <div class="main_controls_button">
+                        <i class="fas fa-comment-alt"></i>
+                        <span>Chat</span>
+                    </div>
+                </div>
+
+                <div class="main_controls_block">
                     
-                 </div>
-              </div>
-           </div>
-        </div>
-     </div>
+                    <div class="main_controls_button"> 
+                        <span class="leave_meeting">Leave Meeting</span>
+                    </div>
+                </div>
 
+            </div>
+        </div>
+        <div class="main_right">
+            <div class="main_header">
+                <h6>Chat</h6>
+            </div>
+            <div class="main_chat_window">
+                <ul class="messages">
+
+                </ul>
+            </div>
+            <div class="main_message_container">
+                <input id="chat_message" type="text" placeholder="Type message here...">
+            </div>
+        </div>
+
+    </div>
+    
     <!-- Import SocketIO for signalling -->
     <script src="/socket.io/socket.io.js"></script>
 
@@ -82,5 +88,6 @@
 
     <!-- Import script containing WebRTC related functions -->
     <script src="js\main.js"></script>
-  </body>
+</body>
+
 </html>
