--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -113,3 +113,14 @@ video{
 .unmute, .stop{
     color: #cc3833;
 }
+
+
+/**/
+#overlayDiv {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    z-index:99;
+}
