--- a/views/chatNew.ejs
+++ b/views/chatNew.ejs
@@ -33,9 +33,8 @@
                     <div class="chat-menus">
                         <ul>
                             <li>
-                                <a href="index.html" class="chat-unread blue">
+                                <a  href="#" class="chat-unread blue">
                                     <span class="material-icons">message</span>
-                                    <span>Chats</span>
                                 </a>
                             </li>
                             <li>
