--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7004,6 +7004,14 @@ p:last-child {
 			width:100%;
 			height: 100%;
 		}
+
+		
+	}
+	@media (min-width: 576px) { 
+		.content .main_content{
+			overflow-y: scroll; 
+
+		}
 	}
 
 
