fixed chat and added a scroll function in it

--- a/views/chatNew.ejs
+++ b/views/chatNew.ejs
@@ -257,7 +257,7 @@
                             </div>
                         </div><div class="slimScrollBar" style="background: rgb(204, 204, 204) none repeat scroll 0% 0%; width: 7px; position: absolute; top: 151px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 642px;"></div><div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51) none repeat scroll 0% 0%; opacity: 0.2; z-index: 90; right: 1px;"></div></div>
                         <div class="chat-footer pt-0">
-                            <form>
+                            <form id="chatForm">
                                 
                                 
                                 <input type="text" class="form-control chat_form" placeholder="Enter Message.....">
@@ -277,65 +277,9 @@
         </div> 
         <!-- /Content -->
 
-        <!-- Video Call -->
-        <div class="modal fade" id="video_call" role="document">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content voice_content">
-                    <div class="modal-body voice_body">
-                        <div class="call-box incoming-box">
-                            <div class="call-wrapper">
-                                <div class="call-inner">
-                                    <div class="call-user">
-                                        <img alt="User Image" src="https://dreamschat.dreamguystech.com/template2/assets/img/avatar/avatar-8.jpg" class="call-avatar">
-                                        <h4 id="chatusername"> <span>video calling</span>
-                                        </h4>
-                                    </div>
-                                    <div class="call-items">
-                                        <a href="#" class="btn call-item call-end" data-dismiss="modal">
-                                            <span class="material-icons">close</span>
-                                        </a>
-                                        <a href="#" class="btn call-item call-start" data-dismiss="modal">
-                                            <i class="fas fa-video"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /Video Call -->
 
-        <!-- Voice Call -->
-        <div class="modal fade" id="voice_call" role="document">
-            <div class="modal-dialog modal-dialog-centered">
-                <div class="modal-content voice_content">
-                    <div class="modal-body voice_body">
-                        <div class="call-box incoming-box">
-                            <div class="call-wrapper">
-                                <div class="call-inner">
-                                    <div class="call-user">
-                                        <img alt="User Image" src="https://dreamschat.dreamguystech.com/template2/assets/img/avatar/avatar-8.jpg" class="call-avatar">
-                                        <h4>Brietta Blogg <span>voice calling</span>
-                                        </h4>
-                                    </div>
-                                    <div class="call-items">
-                                        <a href="#" class="btn call-item call-end" data-dismiss="modal">
-                                            <span class="material-icons">close</span>
-                                        </a>
-                                        <a href="#" class="btn call-item call-start" data-dismiss="modal">
-                                            <i class="fas fa-video"></i>
-                                        </a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- /Voice Call -->
+
+
 		
     </div>
 
