changed link to the new chat style

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -70,7 +70,7 @@
         if(roomName =="" || username==""){
             alert("Please fill all the fileds !!");
         }else{
-            window.location = '/chat/'+roomName+'/'+username;
+            window.location = '/chatNew/'+roomName+'/'+username;
         }
         
       }
