fix video audio controll

--- a/views/chatNew.ejs
+++ b/views/chatNew.ejs
@@ -128,9 +128,9 @@
                         </div>
                         <div class="video-call-action">
                             <ul>
-                                <li><a href="#" onclick="muteUnmute()"><span  id="audioControl" class="material-icons">mic_off</span></a></li>
+                                <li><a href="#" onclick="muteUnmute()"><span  id="audioControl" class="material-icons">mic</span></a></li>
                                 <li><a href="#" onclick="hangup()"class="call-end"><span class="material-icons">call_end</span></a></li>
-                                <li><a href="#" onclick="playStop()" ><span id="videoControl" class="material-icons">videocam_off</span></a></li>
+                                <li><a href="#" onclick="playStop()" ><span id="videoControl" class="material-icons">videocam</span></a></li>
                             </ul>
                         </div>
                     </div>
@@ -155,7 +155,7 @@
                             </div>
                             <div class="chat-body pt-3">
                                 <div class="messages">
-                                    <div class="chats">
+                                  <!-- <div class="chats">
                                         
                                         <div class="chat-content">
                                             <div class="message-content">
@@ -205,54 +205,8 @@
                                                 
                                             </div>
                                         </div>
-                                    </div>
-                                    <div class="chats">
-                                        
-                                        <div class="chat-content">
-                                            <div class="message-content">
-                                                Good morning.....
-                                                <div class="chat-time">
-                                                    <div>
-                                                        <div class="time"><i class="fas fa-clock"></i> 10:00</div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="chat-profile-name">
-                                                
-                                            </div>
-                                        </div>
-                                        <div class="chat-action-btns ml-3">
-                                            <div class="chat-action-col">
-                                                
-                                                <div class="dropdown-menu dropdown-menu-right">
-                                                    <a href="#" class="dropdown-item dream_profile_menu">Copy <span><i class="far fa-copy"></i></span></a>
-                                                    <a href="#" class="dropdown-item">Save <span class="material-icons">save</span></a>
-                                                    <a href="#" class="dropdown-item">Forward <span><i class="fas fa-share"></i></span></a>
-                                                    <a href="#" class="dropdown-item">Delete <span><i class="far fa-trash-alt"></i></span></a>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                    <div class="chats chats-right">
-                                        <div class="chat-content">
-                                            <div class="message-content">
-                                                Wow Thats Great
-                                                <div class="chat-time">
-                                                    <div>
-                                                        <div class="time"><i class="fas fa-clock"></i> 10:00</div>
-                                                    </div>
-                                                </div>
-                                            </div>
-                                            <div class="chat-profile-name text-right">
-                                                <h6>Alexandr</h6>
-                                            </div>
-                                        </div>
-                                        
-                                        <div class="chat-action-btns mr-2">
-                                            
-                                            
-                                        </div>
-                                    </div>                         
+                                    </div>   
+                                    --->                     
                                 </div>
                             </div>
                         </div><div class="slimScrollBar" style="background: rgb(204, 204, 204) none repeat scroll 0% 0%; width: 7px; position: absolute; top: 151px; opacity: 0.4; display: none; border-radius: 7px; z-index: 99; right: 1px; height: 642px;"></div><div class="slimScrollRail" style="width: 7px; height: 100%; position: absolute; top: 0px; display: none; border-radius: 7px; background: rgb(51, 51, 51) none repeat scroll 0% 0%; opacity: 0.2; z-index: 90; right: 1px;"></div></div>
