added cool animation for msgrecived

--- a/views/chatNew.ejs
+++ b/views/chatNew.ejs
@@ -33,7 +33,7 @@
                     <div class="chat-menus">
                         <ul>
                             <li>
-                                <a  href="#" class="chat-unread blue">
+                                <a  href="#" class="chat-unread blue" id="msg_recived">
                                     <span class="material-icons">message</span>
                                 </a>
                             </li>
