--- a/public/css/style.css
+++ b/public/css/style.css
@@ -7018,4 +7018,48 @@ p:last-child {
 		position: relative;
 	}
 
+	/**/
+	.shaker {
+		animation: shake 0.3s;
+		background-color: red !important;
+		/* When the animation is finished, start again */
+		animation-iteration-count: 1; /*single shake */
+	  }
+	  
+	  @keyframes shake {
+		0% {
+		  transform: translate(1px, 1px) rotate(0deg);
+		}
+		10% {
+		  transform: translate(-1px, -2px) rotate(-1deg);
+		}
+		20% {
+		  transform: translate(-3px, 0px) rotate(1deg);
+		}
+		30% {
+		  transform: translate(3px, 2px) rotate(0deg);
+		}
+		40% {
+		  transform: translate(1px, -1px) rotate(1deg);
+		}
+		50% {
+		  transform: translate(-1px, 2px) rotate(-1deg);
+		}
+		60% {
+		  transform: translate(-3px, 1px) rotate(0deg);
+		}
+		70% {
+		  transform: translate(3px, 1px) rotate(-1deg);
+		}
+		80% {
+		  transform: translate(-1px, -1px) rotate(1deg);
+		}
+		90% {
+		  transform: translate(1px, 2px) rotate(0deg);
+		}
+		100% {
+		  transform: translate(1px, -2px) rotate(-1deg);
+		}
+	  }
+
 
