--- a/views/chatNew.ejs
+++ b/views/chatNew.ejs
@@ -216,7 +216,7 @@
                                 
                                 <input type="text" class="form-control chat_form" placeholder="Enter Message.....">
                                 <div class="form-buttons">
-                                    <button class="btn send-btn" type="submit">
+                                    <button class="btn send-btn" onclick="SendMsg()">
                                         <span class="material-icons">send</span>
                                     </button>
                                 </div>
