--- a/views/chatNew.ejs
+++ b/views/chatNew.ejs
@@ -40,7 +40,7 @@
                             <li>
                                 <a href="settings.html" class="chat-unread">
                                     <span class="material-icons">settings</span>
-                                    <span>Settings</span>
+                                    <span id="roomPasswordLabel">Room Password : </span>
                                 </a>
                             </li>
                         </ul>
@@ -260,13 +260,13 @@
         <script src="/socket.io/socket.io.js"></script>
 
         <!-- Import WebRTC adapter for compatibility with all the browsers  -->
-        <script src="https://webrtc.github.io/adapter/adapter-latest.js"></script>
+        <script src="\js\adapter-latest.js"></script>
     
         <!-- Import TURN config -->
         <script src="\js\config.js"></script>
     
         <!-- Import script containing WebRTC related functions -->
-        <script src="\js\main.js"></script>
+        <script src="\js\main.js" defer></script>
 
         <!--Meeting Timer-->
         <script type="text/javascript">
