added exchange pubkeys func

--- a/views/chatNew.ejs
+++ b/views/chatNew.ejs
@@ -264,7 +264,8 @@
     
         <!-- Import TURN config -->
         <script src="\js\config.js"></script>
-    
+        <!--Import Crypto gen pairKeys-->
+        <script src="\js\jsencrypt.min.js"></script>
         <!-- Import script containing WebRTC related functions -->
         <script src="\js\main.js" defer></script>
 
